--- a/css/layout.css
+++ b/css/layout.css
@@ -39,14 +39,14 @@ div.header h1 a{
 	width:127px;
 	height:67px;
 	display:block;
-	background:url(../images/logo.jpg) no-repeat left;
+	background:url(../logos/logo.jpg) no-repeat left;
 	text-indent:0px;
 }
 div.logo{
 	width:	618px;
 	height:	120px;
 	margin:	0px 0px auto;
-	background:url(../images/logo.jpg) no-repeat;
+	background:url(../logos/logo.jpg) no-repeat;
 }
 div.title{
 	width:	548px;
@@ -217,6 +217,13 @@ div.middle H3{
 	padding:	0px 0 13px 0;
 	color:		#443366;
 	border: 	1px ;
+}
+.middle .savebutton {
+	background:url(../images/savesml.png) no-repeat;
+	width:24px;
+	height:20px;
+	border:0;
+	cursor:pointer;
 }
 .middle .viewbutton {
 	background:url(../images/view.png) no-repeat;
